add eraser tool and show current tool

--- a/index.html
+++ b/index.html
@@ -2,5 +2,6 @@
 <body>
   <canvas id="glCanvas" width="1024" height="1024"></canvas>
   <p>fps: <span id="fps"></span></p>
+  <p>brush: <span id="brush"></span></p>
   <script src="./index.js"></script>
 </body>
