add instructions to play live

--- a/index.html
+++ b/index.html
@@ -3,5 +3,6 @@
   <canvas id="glCanvas" width="1024" height="1024"></canvas>
   <p>fps: <span id="fps"></span></p>
   <p>brush: <span id="brush"></span></p>
+  <p>Left click to place the selected element. Use right click to cycle through elements.</p>
   <script src="./index.js"></script>
 </body>
