--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
   <canvas id="glCanvas" width="1024" height="1024"></canvas>
   <p>fps: <span id="fps"></span></p>
   <p>brush: <span id="brush"></span></p>
+  <div>
+    <label for="brush-size">brush size:</label>
+    <input type="number" min="1" max="100" id="brush-size" />
+  </div>
+  <div id="brush-buttons">
+  </div>
   <p>Left click to place the selected element. Use right click to cycle through elements.</p>
-  <script src="./index.js"></script>
+  <script type="module" src="./index.js"></script>
 </body>
