--- a/index.html
+++ b/index.html
@@ -2,13 +2,12 @@
 <body>
   <canvas id="glCanvas" width="1024" height="1024"></canvas>
   <div>
-    <span>brush: <b><span id="brush"></span></b>,</span>
     <label for="brush-size">brush size:</label>
     <input type="number" min="1" max="100" id="brush-size" />
   </div>
   <div id="brush-buttons">
   </div>
   <p>fps: <span id="fps"></span></p>
-  <p>Left click to place the selected element. Use right click to cycle through elements.</p>
+  <p>Left click to place the selected element. You can change the element and brush with the controls above.</p>
   <script type="module" src="./index.js"></script>
 </body>
