--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
 <!DOCTYPE html>
+<head>
+  <meta charset="utf-8" />
+  <link rel="stylesheet" type="text/css" href="./style.css" />
+</head>
 <body>
   <canvas id="glCanvas" width="1024" height="1024"></canvas>
   <div>
